--- a/ShineSuite.Module.Abstate/View/AbstateGeneralView.xaml
+++ b/ShineSuite.Module.Abstate/View/AbstateGeneralView.xaml
@@ -17,6 +17,7 @@
 
     <UserControl.Resources>
         <converter:EnumDescriptionConverter x:Key="EnumDescriptionConverter" />
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
         <ObjectDataProvider x:Key="SubState" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
             <ObjectDataProvider.MethodParameters>
@@ -35,12 +36,18 @@
                 <x:Type TypeName="shinedata:AbstateMemoryStruct" />
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
+        
+        <ObjectDataProvider x:Key="StateType" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="shinedata:StateType" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
     </UserControl.Resources>
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
-            <RowDefinition Height="400" />
+            <RowDefinition Height="450" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -59,12 +66,27 @@
         <GroupBox Grid.Row="1" Header="Abstate">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="300"/>
                     <ColumnDefinition Width="50"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="300"/>
+                    <ColumnDefinition Width="300"/>
+                    <ColumnDefinition Width="300"/>
                 </Grid.ColumnDefinitions>
                 
-                <ikw:SimpleStackPanel Grid.Column="0" Orientation="Vertical" Margin="5" Spacing="5">
+                <Image Grid.Column="0" Source="{Binding SelectedIcon}" Width="32" Height="32" VerticalAlignment="Top"
+                       HorizontalAlignment="Center">
+                    <Image.Effect>
+                        <DropShadowEffect/>
+                    </Image.Effect>
+                </Image>
+                
+                <Canvas Grid.Column="1" Margin="5,0,0,0">
+                    <Image Source="{Binding Icon}" MouseDown="UIElement_OnMouseDown" MouseLeftButtonUp="UIElement_OnMouseLeftButtonUp"/>
+                    <Rectangle Width="16" Height="16" Stroke="White" StrokeThickness="2"
+                               Canvas.Left="{Binding IconOverlayX}" Canvas.Top="{Binding IconOverlayY}" />
+                </Canvas>
+                
+                <ikw:SimpleStackPanel Grid.Column="2" Orientation="Vertical" Margin="5" Spacing="5">
                     <Grid>
                         <TextBox ui:ControlHelper.Header="Index" Text="{Binding SelectedAbState.InxName, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
@@ -103,18 +125,85 @@
                     </Grid>
                 </ikw:SimpleStackPanel>
                 
-                <Image Grid.Column="1" Source="{Binding SelectedIcon}" Width="32" Height="32" VerticalAlignment="Top"
-                       HorizontalAlignment="Center">
-                    <Image.Effect>
-                        <DropShadowEffect/>
-                    </Image.Effect>
-                </Image>
+                <ikw:SimpleStackPanel Grid.Column="3" Orientation="Vertical" Margin="5" Spacing="5">
+                    <Grid>
+                        <ui:AutoSuggestBox ui:ControlHelper.Header="Icon File" HorizontalAlignment="Stretch"
+                                           Text="{Binding SelectedAbstateView.IconFile}"
+                                           TextChanged="IconFile_OnTextChanged"
+                                           SuggestionChosen="IconFile_OnSuggestionChosen"/>
+                    </Grid>
+                    <Grid>
+                        <ComboBox ui:ControlHelper.Header="Effect Type" HorizontalAlignment="Stretch"
+                                  ItemsSource="{Binding EffectTypeOptions}"
+                                  SelectionChanged="EffectType_OnSelectionChanged"
+                                  SelectedItem="{Binding SelectedAbstateView.IconSort, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    </Grid>
+                    <Grid>
+                        <ComboBox ui:ControlHelper.Header="Icon Sorting" HorizontalAlignment="Stretch"
+                                  x:Name="IconSortComboBox"
+                                  ItemsSource="{Binding Source={StaticResource StateType}}"
+                                  SelectedItem="{Binding SelectedAbstateView.TypeSort}"
+                                  IsEnabled="{Binding IsAbstateBuff}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Path=., Converter={StaticResource EnumDescriptionConverter}}" />
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                    </Grid>
+                    <Grid>
+                        <ui:NumberBox ui:ControlHelper.Header="Party Range" HorizontalAlignment="Stretch"
+                                  Text="{Binding SelectedAbState.PartyRange}"/>
+                    </Grid>
+                </ikw:SimpleStackPanel>
                 
-                <Canvas Grid.Column="2" Margin="5,0,0,0">
-                    <Image Source="{Binding Icon}" MouseDown="UIElement_OnMouseDown" MouseLeftButtonUp="UIElement_OnMouseLeftButtonUp"/>
-                    <Rectangle Width="16" Height="16" Stroke="White" StrokeThickness="2"
-                               Canvas.Left="{Binding IconOverlayX}" Canvas.Top="{Binding IconOverlayY}" />
-                </Canvas>
+                <ikw:SimpleStackPanel Grid.Column="4" Orientation="Vertical" Margin="5" Spacing="5">
+                    <Grid>
+                        <ui:AutoSuggestBox ui:ControlHelper.Header="Party Effect (1 Member)" 
+                                           Text="{Binding SelectedAbState.PartyState01}"
+                                           TextChanged="PartyState01_OnTextChanged"
+                                           SuggestionChosen="PartyState01_OnSuggestionChosen"
+                                           IsEnabled="{Binding HasAbstateNoMainState}"
+                        />
+                    </Grid>
+                    <Grid>
+                        <ui:AutoSuggestBox ui:ControlHelper.Header="Party Effect (2 Members)" 
+                                           Text="{Binding SelectedAbState.PartyState02}"
+                                           TextChanged="PartyState02_OnTextChanged"
+                                           SuggestionChosen="PartyState02_OnSuggestionChosen"
+                                           IsEnabled="{Binding HasAbstateNoMainState}"
+                        />
+                    </Grid>
+                    <Grid>
+                        <ui:AutoSuggestBox ui:ControlHelper.Header="Party Effect (3 Members)" 
+                                           Text="{Binding SelectedAbState.PartyState03}"
+                                           TextChanged="PartyState03_OnTextChanged"
+                                           SuggestionChosen="PartyState03_OnSuggestionChosen"
+                                           IsEnabled="{Binding HasAbstateNoMainState}"
+                        />
+                    </Grid>
+                    <Grid>
+                        <ui:AutoSuggestBox ui:ControlHelper.Header="Party Effect (4 Members)" 
+                                           Text="{Binding SelectedAbState.PartyState04}"
+                                           TextChanged="PartyState04_OnTextChanged"
+                                           SuggestionChosen="PartyState04_OnSuggestionChosen"
+                                           IsEnabled="{Binding HasAbstateNoMainState}"
+                        />
+                    </Grid>
+                    <Grid>
+                        <ui:AutoSuggestBox ui:ControlHelper.Header="Party Effect (5 Members)" 
+                                           Text="{Binding SelectedAbState.PartyState05}"
+                                           TextChanged="PartyState05_OnTextChanged"
+                                           SuggestionChosen="PartyState05_OnSuggestionChosen"
+                                           IsEnabled="{Binding HasAbstateNoMainState}"
+                        />
+                    </Grid>
+                    <Grid>
+                        <ui:HyperlinkButton VerticalAlignment="Stretch" VerticalContentAlignment="Center"
+                                            Content="Open Main Abstate" Click="MainAbstateButton_OnClick"
+                                            Visibility="{Binding HasAbstateMainState, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                    </Grid>
+                </ikw:SimpleStackPanel>
             </Grid>
         </GroupBox>
 
@@ -158,7 +247,7 @@
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding ActionIndex01, Converter={StaticResource EnumDescriptionConverter}}" 
-                                           VerticalAlignment="Center"/>
+                                           VerticalAlignment="Center" Margin="10,0,0,0"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
 
@@ -183,7 +272,7 @@
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding ActionIndex02, Converter={StaticResource EnumDescriptionConverter}}" 
-                                           VerticalAlignment="Center"/>
+                                           VerticalAlignment="Center" Margin="10,0,0,0"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
 
@@ -208,7 +297,7 @@
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding ActionIndex03, Converter={StaticResource EnumDescriptionConverter}}" 
-                                           VerticalAlignment="Center"/>
+                                           VerticalAlignment="Center" Margin="10,0,0,0"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
 
@@ -233,7 +322,7 @@
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding ActionIndex04, Converter={StaticResource EnumDescriptionConverter}}" 
-                                           VerticalAlignment="Center"/>
+                                           VerticalAlignment="Center" Margin="10,0,0,0"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
 
