--- a/ShineSuite.Module.Abstate/View/AbstateListView.xaml
+++ b/ShineSuite.Module.Abstate/View/AbstateListView.xaml
@@ -12,17 +12,19 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
+            <RowDefinition Height="42"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
         <Button Margin="5" HorizontalAlignment="Stretch" Command="{Binding CreateAbstateCommand}">
             <ui:IconAndText Content="Add new Abstate" Icon="{x:Static ui:SegoeFluentIcons.Add}"/>
         </Button>
-        <ListBox Grid.Row="1" ItemsSource="{Binding AbnormalState.Records}" SelectedItem="{Binding SelectedAbState}" BorderThickness="0" SelectionMode="Single">
+        <TextBox Grid.Row="1" ui:ControlHelper.PlaceholderText="Search..." Margin="5" Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}"/>
+        <ListBox Grid.Row="2" Margin="0,5,0,0" ItemsSource="{Binding FilteredAbstates}" SelectedItem="{Binding SelectedAbState}" BorderThickness="0" SelectionMode="Single">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
-                        <Label Content="{Binding InxName}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Padding="2,0,0,0" FontSize="12" FontFamily="Biome" FontWeight="Normal"/>
+                        <Label Content="{Binding }" HorizontalAlignment="Left" VerticalAlignment="Bottom" Padding="2,0,0,0" FontSize="12" FontFamily="Biome" FontWeight="Normal"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
